tests/compile_errors/wrong_arg_count.rk
// SPDX-License-Identifier: (MIT OR Apache-2.0)
// ERROR: calling function with wrong number of arguments
// Expected: typecheck error E0310

func add(a: i32, b: i32) -> i32 {
    return a + b
}

func main() {
    const x = add(1)
}
